# simple-fintool

./: .gitignore  .pre-commit-config.yaml  README.md  setup.cfg
.devenv/: Dockerfile  cmdrun_build.sh  cmdrun_fixgit.sh  cmdrun_launch.sh  cmdrun_login.sh
data/: cmdgen_examples.sh  cmdrun_test2_norm.sh  cmdrun_test2_pand.sh  cmdrun_test3_norm.sh  cmdrun_test3_pand.sh
data/perfdata/: perflog0_postdate.txt  perflog0_predate.txt  perflog2_batch.txt  perflog2_normal.txt  perflog2_pandas.txt  perflog3_batch.txt  perflog3_normal.txt  perflog3_pandas.txt  perflog3_split.txt
simple_fintool/cmdline/: database.py  process.py  root.py
simple_fintool/database/: manager.py  session.py  tables.py
simple_fintool/engine/: analizers.py  core_engine.py  core_engine_batched.py  core_engine_split.py
simple_fintool/engine_df/: analizers.py  core_engine.py
