[metadata]
name = simple-fintool
version = 0.1.0
author = Francisco Ramirez
description = Python-based coding project.
long_description = file: README.md, LICENSE
license_files = file: LICENSE
classifiers =
    Programming Language :: Python :: 3


[options]
packages = find:
python_requires = >=3.9
install_requires =
    click
    pydantic
    sqlalchemy

[options.extras_require]
dev =
    pytest
    pre-commit

[options.entry_points]
console_scripts =
    fintool = simple_fintool.cmdline.root:cmd_root
